--- a/WebRoot/WEB-INF/shiro.ini
+++ b/WebRoot/WEB-INF/shiro.ini
@@ -1,12 +1,12 @@
 [main]
 #realm 自定义的realm,编写验证逻辑和授权逻辑
-#myRealm = com.leon.shiro.ShiroDbRealm
-#securityManager.realm = $myRealm
+myRealm = com.wltx.shiro.ShiroDbRealm
+securityManager.realm = $myRealm
  
 #cache
-#shiroCacheManager = org.apache.shiro.cache.ehcache.EhCacheManager
-#shiroCacheManager.cacheManagerConfigFile = classpath:ehcache-shiro.xml
-#securityManager.cacheManager = $shiroCacheManager
+shiroCacheManager = org.apache.shiro.cache.ehcache.EhCacheManager
+shiroCacheManager.cacheManagerConfigFile = classpath:ehcache-shiro.xml
+securityManager.cacheManager = $shiroCacheManager
  
 #session
 sessionDAO = org.apache.shiro.session.mgt.eis.EnterpriseCacheSessionDAO
@@ -18,5 +18,5 @@ securityManager.sessionManager.globalSessionTimeout = 360000
  
 #这里的规则，web.xml中的配置的ShiroFilter会使用到。
 [urls]
-#/card/** = user
-#/** = authc
+/login = anon
+/** = anon
