--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -24,7 +24,7 @@
     <filter-class>com.jfinal.core.JFinalFilter</filter-class>
     <init-param>
       <param-name>configClass</param-name>
-      <param-value>com.wwqk.common.MainConfig</param-value>
+      <param-value>com.wltx.common.MainConfig</param-value>
     </init-param>
   </filter>
   <filter-mapping>
